--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "socket.io": "^4.5.1"
   }
 }
